syntax = "proto3";

package user;

option go_package = "github.com/Acad600-Tpa/WEB-MV-242/backend/services/user/proto";

import "google/protobuf/timestamp.proto";

// User service definition
service UserService {
  // Get user by ID
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  
  // Register a new user
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  
  // Update user information
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  
  // Delete a user
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
  
  // Update user verification status
  rpc UpdateUserVerificationStatus (UpdateUserVerificationStatusRequest) returns (UpdateUserVerificationStatusResponse) {}
}

// User contains user information
message User {
  string id = 1;
  string name = 2;
  string username = 3;
  string email = 4;
  string gender = 5;
  string date_of_birth = 6;
  string bio = 7;
  string location = 8;
  string website = 9;
  string profile_picture_url = 10;
  string banner_url = 11;
  string created_at = 12;
  string updated_at = 13;
}

// GetUserRequest is used to request user information by ID
message GetUserRequest {
  string user_id = 1;
}

// GetUserResponse contains user information
message GetUserResponse {
  User user = 1;
}

// CreateUserRequest contains information needed to register a new user
message CreateUserRequest {
  User user = 1;
}

// CreateUserResponse contains the result of a create operation
message CreateUserResponse {
  User user = 1;
}

// UpdateUserRequest contains updated user information
message UpdateUserRequest {
  User user = 1;
  string user_id = 2;
  string name = 3;
  string email = 4;
  string profile_picture_url = 5;
  string banner_url = 6;
}

// UpdateUserResponse contains the result of an update operation
message UpdateUserResponse {
  User user = 1;
}

// DeleteUserRequest contains user ID to delete
message DeleteUserRequest {
  string user_id = 1;
}

// DeleteUserResponse indicates the result of a delete operation
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// UpdateUserVerificationStatusRequest contains request to update user verification status
message UpdateUserVerificationStatusRequest {
  string user_id = 1;
  bool is_verified = 2;
}

// UpdateUserVerificationStatusResponse contains response to update user verification status
message UpdateUserVerificationStatusResponse {
  bool success = 1;
  string message = 2;
} 